compiler/testData/diagnostics/tests/j+k/accessClassObjectFromJava.fir.kt
class Foo {
  companion object {
    konst bar = 1

    fun test(a: <!UNRESOLVED_REFERENCE!>Foo.`object`<!>) {

    }

  }
}